chore: repo reorg, lib profilling and much more

--- a/tests/benchmarks/serializer/results/index.html
+++ b/tests/benchmarks/serializer/results/index.html
@@ -90,5 +90,32 @@
     </ul>
 </div>
 
+<div class="section">
+    <h2>String Type</h2>
+    <ul class="metric-list">
+        <li><a href="./charts/string/benchmark_chart_results_opsCount.html">Operations Count</a></li>
+        <li><a href="./charts/string/benchmark_chart_results_avgOpTime.html">Average Operation Time</a></li>
+        <li><a href="./charts/string/benchmark_chart_results_allocSize.html">Allocation Size</a></li>
+        <li><a href="./charts/string/benchmark_chart_results_allocCount.html">Allocation Count</a></li>
+    </ul>
+</div>
+
+<div class="section">
+    <h2>Number Type</h2>
+    <ul class="metric-list">
+        <li><a href="./charts/number/benchmark_chart_results_opsCount.html">Operations Count</a></li>
+        <li><a href="./charts/number/benchmark_chart_results_avgOpTime.html">Average Operation Time</a></li>
+        <li><a href="./charts/number/benchmark_chart_results_allocSize.html">Allocation Size</a></li>
+        <li><a href="./charts/number/benchmark_chart_results_allocCount.html">Allocation Count</a></li>
+    </ul>
+</div>
+
+<div class="section">
+    <h2>With Gob Results</h2>
+    <ul class="metric-list">
+        <li><a href="./with_gob/index.html">Gob Results</a></li>
+    </ul>
+</div>
+
 </body>
 </html>
