--- a/tests/benchmarks/serializer/results/charts/string/benchmark_chart_results_opsCount.html
+++ b/tests/benchmarks/serializer/results/charts/string/benchmark_chart_results_opsCount.html
@@ -12,13 +12,13 @@
 
 
     <style> .container {display: flex;justify-content: center;align-items: center;} .item {margin: auto;} </style> <div class="container">
-    <div class="item" id="EEHIMWEzMzAN" style="width:900px;height:500px;"></div>
+    <div class="item" id="GZFUuAdmUTNs" style="width:900px;height:500px;"></div>
 </div><script type="text/javascript">
     "use strict";
-    let goecharts_EEHIMWEzMzAN = echarts.init(document.getElementById('EEHIMWEzMzAN'), "white", { renderer: "canvas" });
-    let option_EEHIMWEzMzAN = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"top":"50"},"series":[{"name":"raw_binary_string_complex string","type":"bar","data":[{"value":152985730},{"value":47726052},{"value":36313978}],"itemStyle":{"color":"rgb(242, 202, 107)"}},{"name":"x_binary_string_complex string","type":"bar","data":[{"value":136815339},{"value":45935137},{"value":34086711}],"itemStyle":{"color":"rgb(238, 102, 102)"}},{"name":"msgpack_string_complex string","type":"bar","data":[{"value":18286700},{"value":19205966},{"value":9103606}],"itemStyle":{"color":"rgb(236, 138, 93)"}},{"name":"json_string_complex string","type":"bar","data":[{"value":6962082},{"value":16533507},{"value":4771087}],"itemStyle":{"color":"rgb(133, 190, 219)"}},{"name":"binary_string_complex string","type":"bar","data":[{"value":57852466},{"value":48238215},{"value":25729929}],"itemStyle":{"color":"rgb(145,204,117)"}}],"title":{"text":"Benchmark Chart - Serializer - string - opsCount - complex string","subtext":"serializer types benchmark results"},"toolbox":{},"tooltip":{},"xAxis":[{"data":["encoding","decoding","rebind"]}],"yAxis":[{}]}
+    let goecharts_GZFUuAdmUTNs = echarts.init(document.getElementById('GZFUuAdmUTNs'), "white", { renderer: "canvas" });
+    let option_GZFUuAdmUTNs = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"top":"50"},"series":[{"name":"raw_binary_string_complex string","type":"bar","data":[{"value":151613977},{"value":47722887},{"value":35814435}],"itemStyle":{"color":"rgb(242, 202, 107)"}},{"name":"x_binary_string_complex string","type":"bar","data":[{"value":139803619},{"value":47831870},{"value":34854168}],"itemStyle":{"color":"rgb(238, 102, 102)"}},{"name":"msgpack_string_complex string","type":"bar","data":[{"value":18640678},{"value":18700702},{"value":9539244}],"itemStyle":{"color":"rgb(236, 138, 93)"}},{"name":"json_string_complex string","type":"bar","data":[{"value":6794331},{"value":16427881},{"value":4780620}],"itemStyle":{"color":"rgb(133, 190, 219)"}},{"name":"binary_string_complex string","type":"bar","data":[{"value":56506708},{"value":45917708},{"value":26036275}],"itemStyle":{"color":"rgb(145,204,117)"}}],"title":{"text":"Benchmark Chart - Serializer - string - opsCount - complex string","subtext":"serializer types benchmark results"},"toolbox":{},"tooltip":{},"xAxis":[{"data":["encoding","decoding","rebind"]}],"yAxis":[{}]}
 
-    goecharts_EEHIMWEzMzAN.setOption(option_EEHIMWEzMzAN);
+    goecharts_GZFUuAdmUTNs.setOption(option_GZFUuAdmUTNs);
 </script>
 
 
