--- a/tests/benchmarks/serializer/results/with_gob/charts/string/benchmark_chart_results_allocCount.html
+++ b/tests/benchmarks/serializer/results/with_gob/charts/string/benchmark_chart_results_allocCount.html
@@ -12,13 +12,13 @@
 
 
     <style> .container {display: flex;justify-content: center;align-items: center;} .item {margin: auto;} </style> <div class="container">
-    <div class="item" id="bpNFDUnXXecq" style="width:900px;height:500px;"></div>
+    <div class="item" id="IAJPpXACMbJb" style="width:900px;height:500px;"></div>
 </div><script type="text/javascript">
     "use strict";
-    let goecharts_bpNFDUnXXecq = echarts.init(document.getElementById('bpNFDUnXXecq'), "white", { renderer: "canvas" });
-    let option_bpNFDUnXXecq = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"top":"50"},"series":[{"name":"msgpack_string_complex string","type":"bar","data":[{"value":2},{"value":2},{"value":4}],"itemStyle":{"color":"rgb(236, 138, 93)"}},{"name":"json_string_complex string","type":"bar","data":[{"value":2},{"value":1},{"value":3}],"itemStyle":{"color":"rgb(133, 190, 219)"}},{"name":"gob_string_complex string","type":"bar","data":[{"value":18},{"value":12},{"value":30}],"itemStyle":{"color":"rgb(89, 160, 118)"}},{"name":"binary_string_complex string","type":"bar","data":[{"value":1},{"value":1},{"value":2}],"itemStyle":{"color":"rgb(145,204,117)"}},{"name":"raw_binary_string_complex string","type":"bar","data":[{"value":0},{"value":1},{"value":1}],"itemStyle":{"color":"rgb(242, 202, 107)"}},{"name":"x_binary_string_complex string","type":"bar","data":[{"value":0},{"value":1},{"value":1}],"itemStyle":{"color":"rgb(238, 102, 102)"}}],"title":{"text":"Benchmark Chart - Serializer - string - allocCount - complex string","subtext":"serializer types benchmark results"},"toolbox":{},"tooltip":{},"xAxis":[{"data":["encoding","decoding","rebind"]}],"yAxis":[{}]}
+    let goecharts_IAJPpXACMbJb = echarts.init(document.getElementById('IAJPpXACMbJb'), "white", { renderer: "canvas" });
+    let option_IAJPpXACMbJb = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"top":"50"},"series":[{"name":"gob_string_complex string","type":"bar","data":[{"value":18},{"value":12},{"value":30}],"itemStyle":{"color":"rgb(89, 160, 118)"}},{"name":"binary_string_complex string","type":"bar","data":[{"value":1},{"value":1},{"value":2}],"itemStyle":{"color":"rgb(145,204,117)"}},{"name":"raw_binary_string_complex string","type":"bar","data":[{"value":0},{"value":1},{"value":1}],"itemStyle":{"color":"rgb(242, 202, 107)"}},{"name":"x_binary_string_complex string","type":"bar","data":[{"value":0},{"value":1},{"value":1}],"itemStyle":{"color":"rgb(238, 102, 102)"}},{"name":"msgpack_string_complex string","type":"bar","data":[{"value":2},{"value":2},{"value":4}],"itemStyle":{"color":"rgb(236, 138, 93)"}},{"name":"json_string_complex string","type":"bar","data":[{"value":2},{"value":1},{"value":3}],"itemStyle":{"color":"rgb(133, 190, 219)"}}],"title":{"text":"Benchmark Chart - Serializer - string - allocCount - complex string","subtext":"serializer types benchmark results"},"toolbox":{},"tooltip":{},"xAxis":[{"data":["encoding","decoding","rebind"]}],"yAxis":[{}]}
 
-    goecharts_bpNFDUnXXecq.setOption(option_bpNFDUnXXecq);
+    goecharts_IAJPpXACMbJb.setOption(option_IAJPpXACMbJb);
 </script>
 
 
