--- a/tests/benchmarks/serializer/results/charts/string/benchmark_chart_results_avgOpTime.html
+++ b/tests/benchmarks/serializer/results/charts/string/benchmark_chart_results_avgOpTime.html
@@ -12,13 +12,13 @@
 
 
     <style> .container {display: flex;justify-content: center;align-items: center;} .item {margin: auto;} </style> <div class="container">
-    <div class="item" id="WIBeHlmhkHcJ" style="width:900px;height:500px;"></div>
+    <div class="item" id="StpegqpIOCJF" style="width:900px;height:500px;"></div>
 </div><script type="text/javascript">
     "use strict";
-    let goecharts_WIBeHlmhkHcJ = echarts.init(document.getElementById('WIBeHlmhkHcJ'), "white", { renderer: "canvas" });
-    let option_WIBeHlmhkHcJ = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"top":"50"},"series":[{"name":"json_string_complex string","type":"bar","data":[{"value":176.4},{"value":72.37},{"value":251.7}],"itemStyle":{"color":"rgb(133, 190, 219)"}},{"name":"binary_string_complex string","type":"bar","data":[{"value":20.62},{"value":25.08},{"value":46.11}],"itemStyle":{"color":"rgb(145,204,117)"}},{"name":"raw_binary_string_complex string","type":"bar","data":[{"value":7.88},{"value":25.49},{"value":33.47}],"itemStyle":{"color":"rgb(242, 202, 107)"}},{"name":"x_binary_string_complex string","type":"bar","data":[{"value":8.896},{"value":26.61},{"value":36.04}],"itemStyle":{"color":"rgb(238, 102, 102)"}},{"name":"msgpack_string_complex string","type":"bar","data":[{"value":65.89},{"value":63.03},{"value":133.5}],"itemStyle":{"color":"rgb(236, 138, 93)"}}],"title":{"text":"Benchmark Chart - Serializer - string - avgOpTime - complex string","subtext":"serializer types benchmark results"},"toolbox":{},"tooltip":{},"xAxis":[{"data":["encoding","decoding","rebind"]}],"yAxis":[{}]}
+    let goecharts_StpegqpIOCJF = echarts.init(document.getElementById('StpegqpIOCJF'), "white", { renderer: "canvas" });
+    let option_StpegqpIOCJF = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"top":"50"},"series":[{"name":"x_binary_string_complex string","type":"bar","data":[{"value":8.622},{"value":25.5},{"value":34.13}],"itemStyle":{"color":"rgb(238, 102, 102)"}},{"name":"msgpack_string_complex string","type":"bar","data":[{"value":63.98},{"value":65.39},{"value":127}],"itemStyle":{"color":"rgb(236, 138, 93)"}},{"name":"json_string_complex string","type":"bar","data":[{"value":176.1},{"value":72.44},{"value":250.5}],"itemStyle":{"color":"rgb(133, 190, 219)"}},{"name":"binary_string_complex string","type":"bar","data":[{"value":20.93},{"value":26.28},{"value":46.4}],"itemStyle":{"color":"rgb(145,204,117)"}},{"name":"raw_binary_string_complex string","type":"bar","data":[{"value":7.901},{"value":25.15},{"value":33.09}],"itemStyle":{"color":"rgb(242, 202, 107)"}}],"title":{"text":"Benchmark Chart - Serializer - string - avgOpTime - complex string","subtext":"serializer types benchmark results"},"toolbox":{},"tooltip":{},"xAxis":[{"data":["encoding","decoding","rebind"]}],"yAxis":[{}]}
 
-    goecharts_WIBeHlmhkHcJ.setOption(option_WIBeHlmhkHcJ);
+    goecharts_StpegqpIOCJF.setOption(option_StpegqpIOCJF);
 </script>
 
 
