--- a/tests/benchmarks/serializer/results/with_gob/charts/string/benchmark_chart_results_allocSize.html
+++ b/tests/benchmarks/serializer/results/with_gob/charts/string/benchmark_chart_results_allocSize.html
@@ -12,13 +12,13 @@
 
 
     <style> .container {display: flex;justify-content: center;align-items: center;} .item {margin: auto;} </style> <div class="container">
-    <div class="item" id="FYEtmGwuIbNg" style="width:900px;height:500px;"></div>
+    <div class="item" id="eTRZnINJdFUm" style="width:900px;height:500px;"></div>
 </div><script type="text/javascript">
     "use strict";
-    let goecharts_FYEtmGwuIbNg = echarts.init(document.getElementById('FYEtmGwuIbNg'), "white", { renderer: "canvas" });
-    let option_FYEtmGwuIbNg = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"top":"50"},"series":[{"name":"binary_string_complex string","type":"bar","data":[{"value":24},{"value":64},{"value":88}],"itemStyle":{"color":"rgb(145,204,117)"}},{"name":"raw_binary_string_complex string","type":"bar","data":[{"value":0},{"value":64},{"value":64}],"itemStyle":{"color":"rgb(242, 202, 107)"}},{"name":"x_binary_string_complex string","type":"bar","data":[{"value":0},{"value":64},{"value":64}],"itemStyle":{"color":"rgb(238, 102, 102)"}},{"name":"msgpack_string_complex string","type":"bar","data":[{"value":72},{"value":112},{"value":184}],"itemStyle":{"color":"rgb(236, 138, 93)"}},{"name":"json_string_complex string","type":"bar","data":[{"value":168},{"value":24},{"value":192}],"itemStyle":{"color":"rgb(133, 190, 219)"}},{"name":"gob_string_complex string","type":"bar","data":[{"value":960},{"value":848},{"value":1808}],"itemStyle":{"color":"rgb(89, 160, 118)"}}],"title":{"text":"Benchmark Chart - Serializer - string - allocSize - complex string","subtext":"serializer types benchmark results"},"toolbox":{},"tooltip":{},"xAxis":[{"data":["encoding","decoding","rebind"]}],"yAxis":[{}]}
+    let goecharts_eTRZnINJdFUm = echarts.init(document.getElementById('eTRZnINJdFUm'), "white", { renderer: "canvas" });
+    let option_eTRZnINJdFUm = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"top":"50"},"series":[{"name":"binary_string_complex string","type":"bar","data":[{"value":24},{"value":64},{"value":88}],"itemStyle":{"color":"rgb(145,204,117)"}},{"name":"raw_binary_string_complex string","type":"bar","data":[{"value":0},{"value":64},{"value":64}],"itemStyle":{"color":"rgb(242, 202, 107)"}},{"name":"x_binary_string_complex string","type":"bar","data":[{"value":0},{"value":64},{"value":64}],"itemStyle":{"color":"rgb(238, 102, 102)"}},{"name":"msgpack_string_complex string","type":"bar","data":[{"value":72},{"value":112},{"value":184}],"itemStyle":{"color":"rgb(236, 138, 93)"}},{"name":"json_string_complex string","type":"bar","data":[{"value":168},{"value":24},{"value":192}],"itemStyle":{"color":"rgb(133, 190, 219)"}},{"name":"gob_string_complex string","type":"bar","data":[{"value":960},{"value":848},{"value":1808}],"itemStyle":{"color":"rgb(89, 160, 118)"}}],"title":{"text":"Benchmark Chart - Serializer - string - allocSize - complex string","subtext":"serializer types benchmark results"},"toolbox":{},"tooltip":{},"xAxis":[{"data":["encoding","decoding","rebind"]}],"yAxis":[{}]}
 
-    goecharts_FYEtmGwuIbNg.setOption(option_FYEtmGwuIbNg);
+    goecharts_eTRZnINJdFUm.setOption(option_eTRZnINJdFUm);
 </script>
 
 
